# claude-statusline

./: Cargo.toml  LICENSE  README.md
src/: main.rs
