[package]
name = "claude-statusline"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
